.metadata/.plugins/org.eclipse.cdt.ui/C_Practice.build.log
21:10:06 **** Incremental Build of configuration Debug for project C_Practice ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c:7:19: error: non-ASCII characters are not allowed outside of literals and identifiers
        {return b ‐ c;}
                  ^~
../main.c:7:18: error: expected ';' after return statement
        {return b ‐ c;}
                 ^
                 ;
2 errors generated.
make: *** [main.o] Error 1

21:10:07 Build Finished (took 506ms)

